--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
+<html>
+<head>
 
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="Copyright" content="&copy; 2012, Intel Corporation. All rights reserved." />
 <!--
  * Copyright (c) 2012, Intel Corporation. All rights reserved.
@@ -8,12 +9,9 @@
  * Please see http://software.intel.com/html5/license/samples 
  * and the included README.md file for license terms and conditions.
 -->
-<meta name="keywords" content="HTML,CSS,JavaScript">
-<meta name="author" content="Dale Schouten">
-<meta charset="UTF-8">
 
-<html>
-<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 <!--
 <link href='http://fonts.googleapis.com/css?family=Ubuntu:400,700' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Orbitron:400,700' rel='stylesheet' type='text/css'>
