commented green.css theme

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <!-- List of theme files, last one (css/simple.css, in this case) is default -->
 <link class=theme rel="stylesheet" type="text/css" href="css/themes/shinybuttons.css">
 <link class=theme rel="stylesheet" type="text/css" href="css/themes/simple.css">
-<link class=theme rel="stylesheet" type="text/css" href="css/themes/green.css">
+<!-- <link class=theme rel="stylesheet" type="text/css" href="css/themes/green.css"> -->
 <link class=theme rel="stylesheet" type="text/css" href="css/themes/mobile.css">
 
 <script type="text/javascript" async="" src="js/rpncalc.js"></script>
